--- a/action.yml
+++ b/action.yml
@@ -8,5 +8,5 @@ runs:
   using: 'node12'
   main: 'dist/index.js'
 branding:
-  icon: tag
-  color: gray-dark
+  icon: 'alert-octagon'
+  color: 'red'
