Update own action branch

--- a/.github/workflows/conflict-finder.yml
+++ b/.github/workflows/conflict-finder.yml
@@ -2,7 +2,7 @@ name: "conflict-finder"
 on:
   pull_request:
   push:
-    branches: [main]
+    branches: [master]
 jobs:
   triage:
     runs-on: ubuntu-latest
