--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,6 @@
 name: "units-test"
 on:
-  pull_request:
-  push:
-    branches:
-      - main
-      - 'releases/*'
-
+  page_build:
 jobs:
   # unit tests
   units:
