--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,4 +17,4 @@ jobs:
     - uses: actions/checkout@v3
     - uses: ./
       with:
-        secret_token: ${{ secrets.GITHUB_TOKEN }}
+        secret_token: 123456
