--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,8 @@ jobs:
   # test action works running from the graph
   test:
     runs-on: ubuntu-latest
+    permissions: 
+      pull-requests: write
     steps:
     - uses: actions/checkout@v3
     - uses: ./
